# pycodegate

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  whitelist.py
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-03-22-python-doctor.md
skills/python-doctor/: SKILL.md
src/pycodegate/: __init__.py
src/pycodegate/rules/: celery.py  numpy_rules.py  pandas_rules.py  pydantic.py  pytest_rules.py  requests_rules.py
src/python_doctor/: api.py  cli.py  config.py  constants.py  discover.py  output.py  scan.py  score.py  types.py
src/python_doctor/rules/: __init__.py  architecture.py  complexity.py  correctness.py  dead_code.py  django.py  fastapi.py  flask.py  performance.py  security.py  structure.py
tests/: conftest.py  test_cli.py  test_config.py  test_discover.py  test_fixer.py  test_output.py  test_score.py  test_types.py
tests/rules/: test_celery.py  test_complexity.py  test_dead_code.py  test_django.py  test_fastapi.py  test_flask.py  test_logging_rules.py  test_performance.py  test_security.py  test_sqlalchemy.py  test_structure.py
